# Dynama-Report-Vizualiser

./: .~lock.full_first_time_df.csv#  .~lock.full_merged.csv#  .~lock.mc_new.csv#  .~lock.n_df.csv#  13_additional_df.csv  13_charecteristics_df.csv  13_demand_df.csv  13_first_time_df.csv  13_market_share_model_df.csv  13_marketing_end_df.csv  13_marketing_retail_df.csv  13_rate_of_coverage_model_df.csv  13_sales_df.csv  13_segments_size_df.csv  13_total_purchase_df.csv  14_additional_df.csv  14_charecteristics_df.csv  14_demand_df.csv  14_first_time_df.csv  14_market_share_model_df.csv  14_marketing_end_df.csv  14_marketing_retail_df.csv  14_rate_of_coverage_model_df.csv  14_sales_df.csv  14_segments_size_df.csv  14_total_purchase_df.csv  15_additional_df.csv  15_charecteristics_df.csv  15_demand_df.csv  15_first_time_df.csv  15_market_share_model_df.csv  15_marketing_end_df.csv  15_marketing_retail_df.csv  15_rate_of_coverage_model_df.csv  15_sales_df.csv  15_segments_size_df.csv  15_total_purchase_df.csv  16_additional_df.csv  16_charecteristics_df.csv  16_demand_df.csv  (+133 more)
Old csv/: demand_df.csv  market_share_df.csv  marketing_costs_df.csv  marketing_end_df.csv  marketing_retail_df.csv  rate_of_coverage_df.csv
