[tool.poetry]
name = "dynama-report-vizualiser"
version = "0.1.0"
description = ""
authors = ["Tony Benoy <me@tonybenoy.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dynama_report_vizualiser"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
ghostscript = "^0.7"
pypdf2 = "^3.0.1"
pdf2jpg = "^1.1"
pytesseract = "^0.3.10"
openpyxl = "^3.1.2"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
